--- a/app.css
+++ b/app.css
@@ -1,6 +1,17 @@
+body{
+    background-color: #393939;
+    box-sizing: border-box;
+    border: 0;
+}
+
 .poster {
     width: 400px;
-    margin: auto;
+    margin: calc(50vh - 283px) auto;
+}
+
+svg{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .pieces {
@@ -3010,5 +3021,12 @@
 
     100% {
         transform: translate(0px, 0px);
+    }
+}
+
+@media(min-width: 700px){
+    .poster {
+        width: 500px;
+        margin: calc(50vh - 336px) auto;
     }
 }
